@startuml

' Classe Item (Produto)
class Item {
    - double weight
    - double value
    + Item(double weight, double value)
    + double getWeight()
    + double getValue()
}

' Classe Estoque
class Estoque {
    - double capacidade
    - List<Item> produtos
    + Estoque(double capacidade, List<Item> produtos)
    + double getCapacidade()
    + List<Item> getProdutos()
}

' Classe EstadoEstoque (KnapsackState)
class EstadoEstoque {
    - List<Item> produtosSelecionados
    - double pesoTotal
    - double valorTotal
    + EstadoEstoque()
    + EstadoEstoque(List<Item> produtosSelecionados)
    + void adicionarProduto(Item item)
    + List<Item> getProdutosSelecionados()
    + double getPesoTotal()§
    + double getValorTotal()
    + double heuristica(double capacidade)
}

' Classe OtimizadorEstoque (KnapsackSolver)
class OtimizadorEstoque {
    - static final int MAX_QUEUE_SIZE
    - static final int MAX_DEPTH
    + EstadoEstoque resolver(Estoque estoque)
    - double calcularPrioridade(EstadoEstoque estado)
}

' Classe SistemaOtimizacaoEstoque
class SistemaOtimizacaoEstoque {
    + static void main(String[] args)
}

' Relacionamentos
Item -- Estoque : Contém >
Estoque -- OtimizadorEstoque : Usado por >
OtimizadorEstoque -- EstadoEstoque : Manipula >
SistemaOtimizacaoEstoque -- OtimizadorEstoque : Inicia >

@enduml
